crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@call_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 220
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node_variants/call_node.rb
---
****FORMATTED****
foo
foo
+foo
foo + bar
foo.bar
foo&.bar

not foo
foo + bar
foo.+@(bar)
puts foo
puts
foo(&block)
foo(bar, &block)
foo(bar) { |baz| puts }
foo(bar) { |baz|
  puts
  puts
}

+foo
foo + foo
foo(bar)
foo(bar, baz)

+ # trailing comment 1
  # leading comment 1
  foo # trailing comment 2
foo + # trailing comment 1
  # leading comment 1
  foo # trailing comment 2
foo(
  # leading comment 1
  bar # trailing comment 1
  # trailing comment 2
)
foo {
  # dangling comment 1
}


****AST****
ProgramNode[0-500]: "foo\nfoo()\n+foo\nfoo + bar\nfoo.bar\nfoo&.bar\n\nnot foo\nfoo + bar\nfoo.+@(bar)\nputs foo\nputs (foo)\nfoo(&block)\nfoo(bar, &block)\nfoo(bar) { |baz| puts baz }\nfoo(bar) { |baz|\n  puts baz\n  puts baz\n}\n\n+\n  foo\nfoo +\n  foo\nfoo(\n  bar\n)\nfoo(bar,\n  baz\n)\n\n+ # trailing comment 1\n  # leading comment 1\n  foo # trailing comment 2\nfoo + # trailing comment 1\n  # leading comment 1\n  foo # trailing comment 2\nfoo(\n  # leading comment 1\n  bar # trailing comment 1\n  # trailing comment 2\n)\nfoo {\n  # dangling comment 1\n}"
__StatementsNode[0-500]: "foo\nfoo()\n+foo\nfoo + bar\nfoo.bar\nfoo&.bar\n\nnot foo\nfoo + bar\nfoo.+@(bar)\nputs foo\nputs (foo)\nfoo(&block)\nfoo(bar, &block)\nfoo(bar) { |baz| puts baz }\nfoo(bar) { |baz|\n  puts baz\n  puts baz\n}\n\n+\n  foo\nfoo +\n  foo\nfoo(\n  bar\n)\nfoo(bar,\n  baz\n)\n\n+ # trailing comment 1\n  # leading comment 1\n  foo # trailing comment 2\nfoo + # trailing comment 1\n  # leading comment 1\n  foo # trailing comment 2\nfoo(\n  # leading comment 1\n  bar # trailing comment 1\n  # trailing comment 2\n)\nfoo {\n  # dangling comment 1\n}"
____CallNode[0-3]: "foo"
____CallNode[4-9]: "foo()"
____CallNode[10-14]: "+foo"
______CallNode[11-14]: "foo"
____CallNode[15-24]: "foo + bar"
______CallNode[15-18]: "foo"
______ArgumentsNode[21-24]: "bar"
________CallNode[21-24]: "bar"
____CallNode[25-32]: "foo.bar"
______CallNode[25-28]: "foo"
____CallNode[33-41]: "foo&.bar"
______CallNode[33-36]: "foo"
____CallNode[43-50]: "not foo"
______CallNode[47-50]: "foo"
____CallNode[51-60]: "foo + bar"
______CallNode[51-54]: "foo"
______ArgumentsNode[57-60]: "bar"
________CallNode[57-60]: "bar"
____CallNode[61-72]: "foo.+@(bar)"
______CallNode[61-64]: "foo"
______ArgumentsNode[68-71]: "bar"
________CallNode[68-71]: "bar"
____CallNode[73-81]: "puts foo"
______ArgumentsNode[78-81]: "foo"
________CallNode[78-81]: "foo"
____CallNode[82-92]: "puts (foo)"
______ArgumentsNode[87-92]: "(foo)"
________ParenthesesNode[87-92]: "(foo)"
__________StatementsNode[88-91]: "foo"
____________CallNode[88-91]: "foo"
____CallNode[93-104]: "foo(&block)"
______BlockArgumentNode[97-103]: "&block"
________CallNode[98-103]: "block"
____CallNode[105-121]: "foo(bar, &block)"
______ArgumentsNode[109-112]: "bar"
________CallNode[109-112]: "bar"
______BlockArgumentNode[114-120]: "&block"
________CallNode[115-120]: "block"
____CallNode[122-149]: "foo(bar) { |baz| puts baz }"
______ArgumentsNode[126-129]: "bar"
________CallNode[126-129]: "bar"
______BlockNode[131-149]: "{ |baz| puts baz }"
________BlockParametersNode[133-138]: "|baz|"
__________ParametersNode[134-137]: "baz"
____________RequiredParameterNode[134-137]: "baz"
________StatementsNode[139-147]: "puts baz"
__________CallNode[139-147]: "puts baz"
____________ArgumentsNode[144-147]: "baz"
______________LocalVariableReadNode[144-147]: "baz"
____CallNode[150-190]: "foo(bar) { |baz|\n  puts baz\n  puts baz\n}"
______ArgumentsNode[154-157]: "bar"
________CallNode[154-157]: "bar"
______BlockNode[159-190]: "{ |baz|\n  puts baz\n  puts baz\n}"
________BlockParametersNode[161-166]: "|baz|"
__________ParametersNode[162-165]: "baz"
____________RequiredParameterNode[162-165]: "baz"
________StatementsNode[169-188]: "puts baz\n  puts baz"
__________CallNode[169-177]: "puts baz"
____________ArgumentsNode[174-177]: "baz"
______________LocalVariableReadNode[174-177]: "baz"
__________CallNode[180-188]: "puts baz"
____________ArgumentsNode[185-188]: "baz"
______________LocalVariableReadNode[185-188]: "baz"
____CallNode[192-199]: "+\n  foo"
______CallNode[196-199]: "foo"
____CallNode[200-211]: "foo +\n  foo"
______CallNode[200-203]: "foo"
______ArgumentsNode[208-211]: "foo"
________CallNode[208-211]: "foo"
____CallNode[212-224]: "foo(\n  bar\n)"
______ArgumentsNode[219-222]: "bar"
________CallNode[219-222]: "bar"
____CallNode[225-241]: "foo(bar,\n  baz\n)"
______ArgumentsNode[229-239]: "bar,\n  baz"
________CallNode[229-232]: "bar"
________CallNode[236-239]: "baz"
____CallNode[243-293]: "+ # trailing comment 1\n  # leading comment 1\n  foo"
______CallNode[290-293]: "foo"
____CallNode[315-369]: "foo + # trailing comment 1\n  # leading comment 1\n  foo"
______CallNode[315-318]: "foo"
______ArgumentsNode[366-369]: "foo"
________CallNode[366-369]: "foo"
____CallNode[391-469]: "foo(\n  # leading comment 1\n  bar # trailing comment 1\n  # trailing comment 2\n)"
______ArgumentsNode[420-423]: "bar"
________CallNode[420-423]: "bar"
____CallNode[470-500]: "foo {\n  # dangling comment 1\n}"
______BlockNode[474-500]: "{\n  # dangling comment 1\n}"
