crates/shinier_rb_formatter/tests/snapshots/snapshot_test__run@call_target_node.rb.snap
---
source: crates/shinier_rb_formatter/tests/snapshot_test.rs
assertion_line: 220
expression: output
input_file: crates/shinier_rb_formatter/tests/ruby/node_variants/call_target_node.rb
---
****FORMATTED****
foo.bar, = 1
begin
rescue => foo.bar
end
for foo.bar in baz
end


****AST****
ProgramNode[0-66]: "foo.bar, = 1\nbegin\nrescue => foo.bar\nend\nfor foo.bar in baz do end"
__StatementsNode[0-66]: "foo.bar, = 1\nbegin\nrescue => foo.bar\nend\nfor foo.bar in baz do end"
____MultiWriteNode[0-12]: "foo.bar, = 1"
______CallTargetNode[0-7]: "foo.bar"
________CallNode[0-3]: "foo"
______ImplicitRestNode[7-8]: ","
______IntegerNode[11-12]: "1"
____BeginNode[13-40]: "begin\nrescue => foo.bar\nend"
______RescueNode[19-36]: "rescue => foo.bar"
________CallTargetNode[29-36]: "foo.bar"
__________CallNode[29-32]: "foo"
____ForNode[41-66]: "for foo.bar in baz do end"
______CallTargetNode[45-52]: "foo.bar"
________CallNode[45-48]: "foo"
______CallNode[56-59]: "baz"
